fix maven shade merging + fix ingestion order for foreign key dependencies + fix unique hash buffer limit + fix tpcc cleanup endpoints